--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <script>
 const newsList = document.getElementById("newsList");
-fetch("/api/news")
+fetch("https://news-api.pedehi.workers.dev/api/news")
   .then(res => res.json())
   .then(data => {
     newsList.innerHTML = "";
