--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
       font-size: 1em;
       color: #333;
     }
+    .summary a {
+      font-weight: bold;
+      text-decoration: none;
+      color: var(--main-color);
+    }
     nav {
       text-align: center;
       margin-top: 40px;
@@ -114,7 +119,10 @@ fetch("https://news-summarizer.pedehi.workers.dev/api/news")
       card.className = "card";
       card.innerHTML = `
         ${article.image ? `<img src="${article.image}" alt="アイキャッチ">` : ''}
-        <div class="summary"><a href="${article.url}" target="_blank">${article.title}</a><br>${article.summary}</div>
+        <div class="summary">
+          <a href="${article.url}" target="_blank">${article.title}</a><br>
+          ${article.summary || '要約なし'}
+        </div>
       `;
       newsList.appendChild(card);
     });
@@ -129,7 +137,10 @@ const articles = JSON.parse(localStorage.getItem('articles') || '{}');
 
 const publishedArticles = Object.entries(articles)
   .filter(([_, article]) => article.status === "published" || article.status === "public")
-  .sort((a, b) => new Date(b[1].publishedAt || b[1].date) - new Date(a[1].publishedAt || a[1].date));
+  .sort((a, b) =>
+    new Date(b[1].datePublished || b[1].publishedAt || b[1].date || 0) -
+    new Date(a[1].datePublished || a[1].publishedAt || a[1].date || 0)
+  );
 
 if (publishedArticles.length === 0) {
   articlesList.innerHTML = "<p>まだ記事がありません。</p>";
@@ -138,12 +149,17 @@ if (publishedArticles.length === 0) {
   publishedArticles.forEach(([id, article]) => {
     const card = document.createElement("div");
     card.className = "card";
-    const dateText = article.publishedAt || article.date || "日付不明";
+
+    const dateText = article.datePublished || article.publishedAt || article.date || "日付不明";
     const summaryText = article.summary || article.content?.slice(0, 50) + "…" || "要約なし";
+    const link = article.url ? `<a href="${article.url}" target="_blank">${article.title}</a>` : article.title;
 
     card.innerHTML = `
+      ${article.image ? `<img src="${article.image}" alt="アイキャッチ">` : ''}
       <div class="date">${new Date(dateText).toLocaleDateString('ja-JP')}</div>
-      <div class="summary">${summaryText}</div>
+      <div class="summary">
+        ${link}<br>${summaryText}
+      </div>
     `;
     articlesList.appendChild(card);
   });
